# starsolver

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html
starsolver/: __init__.py  bayer.csv  catalog.py  config.py  constellation_borders.npz  deepsky.py  detector.py  draw.py  hip.npz  messier.csv  messier.tsv  minicv.py  panorama.py  pipeline.py  planets.py  plate.py  refine.py  solver.py  tetra3_database.npz
tests/: conftest.py  test_pipeline.py
