[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "starsolver"
version = "0.0.1"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "Pillow",
    "tetra3 @ git+https://github.com/vadim-v-lebedev/tetra3.git",
]

[project.scripts]
starsolver = "starsolver.pipeline:main"

[tool.setuptools.package-data]
starsolver = ["hip.npz", "constellation_borders.npz", "tetra3_database.npz", "*.ttf", "*.tsv"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
